--- a/index.html
+++ b/index.html
@@ -293,15 +293,15 @@
                <h3>Contact Us For More Info</h3>
                <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST" enctype="text/plain">
                   <div class="row">
-                     <input name="first-name" type="first-name" id="first-name" placeholder="First Name" required/>
-                     <input name="last-name" type="last-name" id="last-name" placeholder="Last Name" required/>
+                     <input type="first-name" name="first-name" id="first-name" placeholder="First Name" required/>
+                     <input type="last-name" name="last-name" id="last-name" placeholder="Last Name" required/>
                   </div>
                   <div class="row">
-                     <input name="email" type="email" id="email" placeholder="Mail" required/>
-                     <input name="number" type="number" id="number" placeholder="Phone Number" required/>
+                     <input type="email" name="email" id="email" placeholder="Mail" required/>
+                     <input type="number" name="number" id="number" placeholder="Phone Number" required/>
                   </div>
                   <div class="row">
-                     <textarea name="message" id="" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
+                     <textarea id="" name="message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
                   </div>
                   <input class="submit" type="submit" id="submit" />
                </form>
