--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                   <div class="row">
                      <textarea id="" name="message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
                   </div>
-                  <input class="submit" type="submit" id="submit" />
+                  <button class="submit" type="submit" id="submit">SUBMIT</button>
                </form>
             </div>
          </section>
