--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
                   <div class="row">
                      <textarea id="" name="message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
                   </div>
+                  <input type="hidden" name="_url" value="https://jos3ph1205.github.io/little-king/">
                   <button class="submit" type="submit" id="submit">SUBMIT</button>
                </form>
             </div>
