--- a/index.html
+++ b/index.html
@@ -291,19 +291,18 @@
             </div>
             <div class="contact">
                <h3>Contact Us For More Info</h3>
-               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST">
+               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988.e@gmail.com" method="POST">
                   <div class="row">
-                     <input type="first-name" name="first-name" id="first-name" placeholder="First Name" required/>
-                     <input type="last-name" name="last-name" id="last-name" placeholder="Last Name" required/>
+                     <input type="text" name="First-Name" id="first-name" placeholder="First Name" required/>
+                     <input type="text" name="Last-Name" id="last-name" placeholder="Last Name" required/>
                   </div>
                   <div class="row">
-                     <input type="email" name="email" id="email" placeholder="Mail" required/>
-                     <input type="number" name="number" id="number" placeholder="Phone Number" required/>
+                     <input type="email" name="Email" id="email" placeholder="Mail" required/>
+                     <input type="tel" name="Phone-Number" id="number" placeholder="Phone Number" required/>
                   </div>
                   <div class="row">
-                     <textarea id="" name="message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
+                     <textarea id="" name="Message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
                   </div>
-                  <input type="hidden" name="_url" value="https://jos3ph1205.github.io/little-king/">
                   <button class="submit" type="submit" id="submit">SUBMIT</button>
                </form>
             </div>
