--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </div>
             <div class="contact">
                <h3>Contact Us For More Info</h3>
-               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988.e@gmail.com" method="POST">
+               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST">
                   <div class="row">
                      <input type="text" name="First-Name" id="first-name" placeholder="First Name" required/>
                      <input type="text" name="Last-Name" id="last-name" placeholder="Last Name" required/>
