--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@
             </div>
             <div class="contact">
                <h3>Contact Us For More Info</h3>
-               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST">
+               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988.e@gmail.com" method="POST">
                   <div class="row">
                      <input type="text" name="First-Name" id="first-name" placeholder="First Name" required/>
                      <input type="text" name="Last-Name" id="last-name" placeholder="Last Name" required/>
                   </div>
                   <div class="row">
                      <input type="email" name="Email" id="email" placeholder="Mail" required/>
-                     <input type="tel" name="Phone-Number" id="number" placeholder="Phone Number" required/>
+                     <input type="number" name="Phone-Number" id="number" pattern="/(7|8|9)\d{9}/" placeholder="Phone Number" required/>
                   </div>
                   <div class="row">
                      <textarea id="" name="Message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
