--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
             </div>
          </section>
          <section id="products">
+            <header>Our Products</header>
+            <div class="products-filter">
+               <div data-filter-type="all" class="filter active">All</div>
+               <div data-filter-type="popular" class="filter" >Popular</div>
+               <div data-filter-type="on-sale" class="filter" >On Sale</div>
+            </div>
             <div class="products-wrapper">
-               <div class="product">
+               <div data-filter="popular" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/1-Azure-Blue.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -54,7 +60,7 @@
                   </div>
                   <input class="buy" type="button" value="BUY" />
                </div>
-               <div class="product">
+               <div data-filter="popular" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/2-Crimson-Red.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -65,7 +71,7 @@
                   </div>
                   <input class="buy" type="button" value="BUY" />
                </div>
-               <div class="product">
+               <div data-filter="on-sale" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/3-Orangey-Yellow.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -77,7 +83,7 @@
                   <input class="buy" type="button" value="BUY" />
                   <span class="discount-percent">30% OFF</span>
                </div>
-               <div class="product">
+               <div data-filter="popular" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/4-Denim-Blue.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -88,7 +94,7 @@
                   </div>
                   <input class="buy" type="button" value="BUY" />
                </div>
-               <div class="product">
+               <div data-filter="popular" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/5-Maroon.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -99,7 +105,7 @@
                   </div>
                   <input class="buy" type="button" value="BUY" />
                </div>
-               <div class="product">
+               <div data-filter="on-sale" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/6-Pacific-Blue.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -111,7 +117,7 @@
                   <input class="buy" type="button" value="BUY" />
                   <span class="discount-percent">20% OFF</span>
                </div>
-               <div class="product">
+               <div data-filter="" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/7-Syrup-Brown.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -122,7 +128,7 @@
                   </div>
                   <input class="buy" type="button" value="BUY" />
                </div>
-               <div class="product">
+               <div  data-filter="popular" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/8-Dark-Green.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -133,7 +139,7 @@
                   </div>
                   <input class="buy" type="button" value="BUY" />
                </div>
-               <div class="product">
+               <div  data-filter="on-sale" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/9-Medium-Grey.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -145,7 +151,7 @@
                   <input class="buy" type="button" value="BUY" />
                   <span class="discount-percent">15% OFF</span>
                </div>
-               <div class="product">
+               <div  data-filter="" class="product">
                   <div class="thumbnail">
                      <img id="img" src="media/images/little-king-shirts/10-Pastel-Green.png" alt="" />
                      <i class="fa-solid fa-expand preview-fullscreen"></i>
@@ -291,7 +297,7 @@
             </div>
             <div class="contact">
                <h3>Contact Us For More Info</h3>
-               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/sharvinjoseph.e@gmail.com" method="POST">
+               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST">
                   <div class="row">
                      <input type="text" name="First-Name" id="first-name" placeholder="First Name" required/>
                      <input type="text" name="Last-Name" id="last-name" placeholder="Last Name" required/>
