--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <header>Our Products</header>
             <div class="products-filter">
                <div data-filter-type="all" class="filter active">All</div>
-               <div data-filter-type="popular" class="filter" >Popular</div>
-               <div data-filter-type="on-sale" class="filter" >On Sale</div>
+               <div data-filter-type="popular" class="filter" ><i class="fa-solid fa-fire"></i> Popular</div>
+               <div data-filter-type="on-sale" class="filter" ><i class="fa-solid fa-tag"></i> On Sale</div>
             </div>
             <div class="products-wrapper">
                <div data-filter="popular" class="product">
@@ -297,7 +297,7 @@
             </div>
             <div class="contact">
                <h3>Contact Us For More Info</h3>
-               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST">
+               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/sharvinjoseph.e@gmail.com" method="POST">
                   <div class="row">
                      <input type="text" name="First-Name" id="first-name" placeholder="First Name" required/>
                      <input type="text" name="Last-Name" id="last-name" placeholder="Last Name" required/>
