--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <div class="contact">
                <h3>Contact Us For More Info</h3>
-               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/sharvinjoseph.e@gmail.com" method="POST">
+               <form target="_blank" class="contact-form" id="form" action="https://formsubmit.co/f148c52eeeea6dd54dc8dda9af7f0988" method="POST">
                   <div class="row">
                      <input type="text" name="First-Name" id="first-name" placeholder="First Name" required/>
                      <input type="text" name="Last-Name" id="last-name" placeholder="Last Name" required/>
@@ -309,6 +309,7 @@
                   <div class="row">
                      <textarea id="" name="Message" cols="30" rows="10" placeholder="Message" style="resize: none;" required></textarea>
                   </div>
+                  <input type="hidden" name="_url" value="https://jos3ph1205.github.io/little-king/">
                   <button class="submit" type="submit" id="submit">SUBMIT</button>
                </form>
             </div>
